--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>boolando</title>
 </head>
 <body>
-    
+    <div class="contenitore" >
+        <section class="insersione ins1"> 
+            <div class="insersione2 ins1-B" ></div> 
+            <div class="cuore"></div> 
+        </section>
+    </div>    
 </body>
 </html>
