--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <title>boolando</title>
 </head>
 <body>
-    <div class="contenitore" >
-        <section class="insersione ins1"> 
-            <div class="insersione2 ins1-B" ></div> 
-            <div class="cuore"></div> 
-        </section>
+    <div class="super-contenitore" >
+        <section class="contenitore" >
+            <div class="insersione ins1"> 
+                <div class="insersione2 ins1-B" ></div> 
+                <div class="cuore"></div> 
+            </div>
+        </section>    
     </div>    
 </body>
 </html>
