--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 <body>
     <div class="super-contenitore" >
         <section class="contenitore" >
-            <div class="insersione ins1"> 
-                <div class="insersione2 ins1-B" ></div> 
-                <div class="cuore"></div> 
+            <div class="insersione">
+                <img class="img1" src="img/1.webp" alt="tizio rasato"> 
+                <img class="img2" src="img/1b.webp" alt="tizio rasato con la giacca">
+                <div>
+                    <span class="marca">00</span>
+                </div>
             </div>
         </section>    
     </div>    
