--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
             <div class="insersione">
                 <img class="img1" src="img/1.webp" alt="tizio rasato"> 
                 <img class="img2" src="img/1b.webp" alt="tizio rasato con la giacca">
-                <div>
-                    <span class="marca">00</span>
+                <div class="sconti" > <span class="red"> <strong> -50%</strong></span> <span class="red green"> <strong>Sostenibilità</strong> </span> </div>
+                <div class="cuore"> <span>&#x2764;</span> </div>
+                <div class="testo">
+                    <span class="marca">l'evis</span>
+                    <h6>RELAXED FIT TEE UNISEX</h6>
+                    <span class="prezzo">14,99€</span> <span class="prezzo originale">29,99€</span>
                 </div>
             </div>
         </section>    
