--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="super-contenitore" >
+        <!-- prima -->
         <section class="contenitore" >
             <div class="insersione">
                 <img class="img1" src="img/1.webp" alt="tizio rasato"> 
@@ -21,7 +22,79 @@
                     <span class="prezzo">14,99€</span> <span class="prezzo originale">29,99€</span>
                 </div>
             </div>
-        </section>    
+        </section>
+        <!-- seconda -->
+        <section class="contenitore" >
+            <div class="insersione">
+                <img class="img1" src="img/1.webp" alt="tizio rasato"> 
+                <img class="img2" src="img/1b.webp" alt="tizio rasato con la giacca">
+                <div class="sconti" > <span class="red"> <strong> -50%</strong></span> <span class="red green"> <strong>Sostenibilità</strong> </span> </div>
+                <div class="cuore"> <span>&#x2764;</span> </div>
+                <div class="testo">
+                    <span class="marca">l'evis</span>
+                    <h6>RELAXED FIT TEE UNISEX</h6>
+                    <span class="prezzo">14,99€</span> <span class="prezzo originale">29,99€</span>
+                </div>
+            </div>
+        </section>   
+         <!-- terza -->
+        <section class="contenitore" >
+                    <div class="insersione">
+                        <img class="img1" src="img/1.webp" alt="tizio rasato"> 
+                        <img class="img2" src="img/1b.webp" alt="tizio rasato con la giacca">
+                        <div class="sconti" > <span class="red"> <strong> -50%</strong></span> <span class="red green"> <strong>Sostenibilità</strong> </span> </div>
+                        <div class="cuore"> <span>&#x2764;</span> </div>
+                        <div class="testo">
+                            <span class="marca">l'evis</span>
+                            <h6>RELAXED FIT TEE UNISEX</h6>
+                            <span class="prezzo">14,99€</span> <span class="prezzo originale">29,99€</span>
+                        </div>
+                    </div>
+        </section>   
     </div>    
+    <div class="super-contenitore" >
+        <!-- prima -->
+        <section class="contenitore" >
+            <div class="insersione">
+                <img class="img1" src="img/1.webp" alt="tizio rasato"> 
+                <img class="img2" src="img/1b.webp" alt="tizio rasato con la giacca">
+                <div class="sconti" > <span class="red"> <strong> -50%</strong></span> <span class="red green"> <strong>Sostenibilità</strong> </span> </div>
+                <div class="cuore"> <span>&#x2764;</span> </div>
+                <div class="testo">
+                    <span class="marca">l'evis</span>
+                    <h6>RELAXED FIT TEE UNISEX</h6>
+                    <span class="prezzo">14,99€</span> <span class="prezzo originale">29,99€</span>
+                </div>
+            </div>
+        </section>
+        <!-- seconda -->
+        <section class="contenitore" >
+            <div class="insersione">
+                <img class="img1" src="img/1.webp" alt="tizio rasato"> 
+                <img class="img2" src="img/1b.webp" alt="tizio rasato con la giacca">
+                <div class="sconti" > <span class="red"> <strong> -50%</strong></span> <span class="red green"> <strong>Sostenibilità</strong> </span> </div>
+                <div class="cuore"> <span>&#x2764;</span> </div>
+                <div class="testo">
+                    <span class="marca">l'evis</span>
+                    <h6>RELAXED FIT TEE UNISEX</h6>
+                    <span class="prezzo">14,99€</span> <span class="prezzo originale">29,99€</span>
+                </div>
+            </div>
+        </section>   
+         <!-- terza -->
+        <section class="contenitore" >
+                    <div class="insersione">
+                        <img class="img1" src="img/1.webp" alt="tizio rasato"> 
+                        <img class="img2" src="img/1b.webp" alt="tizio rasato con la giacca">
+                        <div class="sconti" > <span class="red"> <strong> -50%</strong></span> <span class="red green"> <strong>Sostenibilità</strong> </span> </div>
+                        <div class="cuore"> <span>&#x2764;</span> </div>
+                        <div class="testo">
+                            <span class="marca">l'evis</span>
+                            <h6>RELAXED FIT TEE UNISEX</h6>
+                            <span class="prezzo">14,99€</span> <span class="prezzo originale">29,99€</span>
+                        </div>
+                    </div>
+        </section>   
+    </div>   
 </body>
 </html>
