--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <!-- seconda -->
         <section class="contenitore" >
             <div class="insersione">
-                <img class="img1" src="img/1.webp" alt="tizio rasato"> 
-                <img class="img2" src="img/1b.webp" alt="tizio rasato con la giacca">
+                <img class="img1" src="img/2.webp" alt="gonna rossa"> 
+                <img class="img2" src="img/2b.webp" alt="non cia niente da fa">
                 <div class="sconti" > <span class="red"> <strong> -50%</strong></span> <span class="red green"> <strong>Sostenibilità</strong> </span> </div>
                 <div class="cuore"> <span>&#x2764;</span> </div>
                 <div class="testo">
@@ -40,8 +40,8 @@
          <!-- terza -->
         <section class="contenitore" >
                     <div class="insersione">
-                        <img class="img1" src="img/1.webp" alt="tizio rasato"> 
-                        <img class="img2" src="img/1b.webp" alt="tizio rasato con la giacca">
+                        <img class="img1" src="img/3.webp" alt="vestito verde"> 
+                        <img class="img2" src="img/3b.webp" alt="vestito rosa">
                         <div class="sconti" > <span class="red"> <strong> -50%</strong></span> <span class="red green"> <strong>Sostenibilità</strong> </span> </div>
                         <div class="cuore"> <span>&#x2764;</span> </div>
                         <div class="testo">
@@ -53,11 +53,11 @@
         </section>   
     </div>    
     <div class="super-contenitore" >
-        <!-- prima -->
+        <!-- quarta -->
         <section class="contenitore" >
             <div class="insersione">
-                <img class="img1" src="img/1.webp" alt="tizio rasato"> 
-                <img class="img2" src="img/1b.webp" alt="tizio rasato con la giacca">
+                <img class="img1" src="img/4.webp" alt="tizio in cannottiera"> 
+                <img class="img2" src="img/4b.webp" alt="anche con la giacca">
                 <div class="sconti" > <span class="red"> <strong> -50%</strong></span> <span class="red green"> <strong>Sostenibilità</strong> </span> </div>
                 <div class="cuore"> <span>&#x2764;</span> </div>
                 <div class="testo">
@@ -67,11 +67,11 @@
                 </div>
             </div>
         </section>
-        <!-- seconda -->
+        <!-- quinta -->
         <section class="contenitore" >
             <div class="insersione">
-                <img class="img1" src="img/1.webp" alt="tizio rasato"> 
-                <img class="img2" src="img/1b.webp" alt="tizio rasato con la giacca">
+                <img class="img1" src="img/5.webp" alt="come la definisco?"> 
+                <img class="img2" src="img/5b.webp"  alt="con la testa storta">
                 <div class="sconti" > <span class="red"> <strong> -50%</strong></span> <span class="red green"> <strong>Sostenibilità</strong> </span> </div>
                 <div class="cuore"> <span>&#x2764;</span> </div>
                 <div class="testo">
@@ -81,11 +81,11 @@
                 </div>
             </div>
         </section>   
-         <!-- terza -->
+         <!-- sesta -->
         <section class="contenitore" >
                     <div class="insersione">
-                        <img class="img1" src="img/1.webp" alt="tizio rasato"> 
-                        <img class="img2" src="img/1b.webp" alt="tizio rasato con la giacca">
+                        <img class="img1" src="img/6.webp" alt="maia nera"> 
+                        <img class="img2" src="img/6b.webp" alt="da lontano">
                         <div class="sconti" > <span class="red"> <strong> -50%</strong></span> <span class="red green"> <strong>Sostenibilità</strong> </span> </div>
                         <div class="cuore"> <span>&#x2764;</span> </div>
                         <div class="testo">
