--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             <div class="insersione">
                 <img class="img1" src="img/2.webp" alt="gonna rossa"> 
                 <img class="img2" src="img/2b.webp" alt="non cia niente da fa">
-                <div class="sconti" > <span class="red"> <strong> -50%</strong></span> <span class="red green"> <strong>Sostenibilità</strong> </span> </div>
+                <div class="sconti" > <span class="red"> <strong> -30%</strong></span></div>
                 <div class="cuore"> <span>&#x2764;</span> </div>
                 <div class="testo">
-                    <span class="marca">l'evis</span>
-                    <h6>RELAXED FIT TEE UNISEX</h6>
-                    <span class="prezzo">14,99€</span> <span class="prezzo originale">29,99€</span>
+                    <span class="marca">Guess</span>
+                    <h6>ROSES TEE</h6>
+                    <span class="prezzo">20,99€</span> <span class="prezzo originale">29,99€</span>
                 </div>
             </div>
         </section>   
@@ -42,12 +42,12 @@
                     <div class="insersione">
                         <img class="img1" src="img/3.webp" alt="vestito verde"> 
                         <img class="img2" src="img/3b.webp" alt="vestito rosa">
-                        <div class="sconti" > <span class="red"> <strong> -50%</strong></span> <span class="red green"> <strong>Sostenibilità</strong> </span> </div>
+                        <div class="sconti" > <span class="red"> <strong> -30%</strong></span></div>
                         <div class="cuore"> <span>&#x2764;</span> </div>
                         <div class="testo">
-                            <span class="marca">l'evis</span>
-                            <h6>RELAXED FIT TEE UNISEX</h6>
-                            <span class="prezzo">14,99€</span> <span class="prezzo originale">29,99€</span>
+                            <span class="marca">Come zucchero Filato</span>
+                            <h6>VOGLIA DI COLORI PASTELLO</h6>
+                            <span class="prezzo">129,99€</span>
                         </div>
                     </div>
         </section>   
@@ -61,8 +61,8 @@
                 <div class="sconti" > <span class="red"> <strong> -50%</strong></span> <span class="red green"> <strong>Sostenibilità</strong> </span> </div>
                 <div class="cuore"> <span>&#x2764;</span> </div>
                 <div class="testo">
-                    <span class="marca">l'evis</span>
-                    <h6>RELAXED FIT TEE UNISEX</h6>
+                    <span class="marca">levi's</span>
+                    <h6>TEE UNISEX</h6>
                     <span class="prezzo">14,99€</span> <span class="prezzo originale">29,99€</span>
                 </div>
             </div>
@@ -72,12 +72,12 @@
             <div class="insersione">
                 <img class="img1" src="img/5.webp" alt="come la definisco?"> 
                 <img class="img2" src="img/5b.webp"  alt="con la testa storta">
-                <div class="sconti" > <span class="red"> <strong> -50%</strong></span> <span class="red green"> <strong>Sostenibilità</strong> </span> </div>
+                <!-- <div class="sconti" > <span class="red"> <strong> -50%</strong></span> <span class="red green"> <strong>Sostenibilità</strong> </span> </div> -->
                 <div class="cuore"> <span>&#x2764;</span> </div>
                 <div class="testo">
-                    <span class="marca">l'evis</span>
-                    <h6>RELAXED FIT TEE UNISEX</h6>
-                    <span class="prezzo">14,99€</span> <span class="prezzo originale">29,99€</span>
+                    <span class="marca">Maya Delux</span>
+                    <h6>STRIPE BODICE</h6>
+                    <span class="prezzo">99,99€</span>
                 </div>
             </div>
         </section>   
@@ -86,12 +86,12 @@
                     <div class="insersione">
                         <img class="img1" src="img/6.webp" alt="maia nera"> 
                         <img class="img2" src="img/6b.webp" alt="da lontano">
-                        <div class="sconti" > <span class="red"> <strong> -50%</strong></span> <span class="red green"> <strong>Sostenibilità</strong> </span> </div>
+                        <div class="sconti" > <span class="red"><span class="red green"> <strong>Sostenibilità</strong> </span> </div>
                         <div class="cuore"> <span>&#x2764;</span> </div>
                         <div class="testo">
-                            <span class="marca">l'evis</span>
-                            <h6>RELAXED FIT TEE UNISEX</h6>
-                            <span class="prezzo">14,99€</span> <span class="prezzo originale">29,99€</span>
+                            <span class="marca">Esprit</span>
+                            <h6> MAGLIONE-BLACK</h6>
+                            <span class="prezzo">29,99€</span>
                         </div>
                     </div>
         </section>   
